# ripple

./: .gitignore  .ignore_words.txt  .pre-commit-config.yaml  LICENSE  README.md  cspell.json  mkdocs.yml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: CI.yml  ci.yml
docs/: requirements.txt
notebooks/: check_IMRD_NRTv2.ipynb  check_IMRPhenomD.ipynb  check_SineGaussian.ipynb  check_TaylorF2.ipynb
src/ripplegw/: __init__.py  gsl_ellint.py  noise.py  ripple.py  utils.py
src/ripplegw/waveform_model/: WaveformModel.py
src/ripplegw/waveforms/: IMRPhenomD.py  IMRPhenomD_NRTidalv2.py  IMRPhenomD_QNMdata.py  IMRPhenomD_utils.py  IMRPhenomPv2.py  IMRPhenomPv2_utils.py  IMRPhenomXAS.py  IMRPhenomXAS_NRTidalv3.py  IMRPhenomXP.py  IMRPhenomXP_utils.py  IMRPhenomX_utils.py  IMRPhenom_tidal_utils.py  JaxNRSur.py  NRTidalv3_utils.py  SineGaussian.py  TaylorF2.py  WaveformModel.py  __init__.py  spherical_harmonics.py
src/ripplegw/waveforms/IMRPhenomXPHM/: lal_sim_imr_phenom_x_utilities.py  lal_sim_imr_phenom_xphm.py
src/ripplegw/waveforms/imr_phenom_xphm/: IMRPhenomXPHM.py  __init__.py  dataclass_utils.py  lal_constants.py  lal_datatypes.py  lal_sim_imr_phenom_x_inspiral.py  lal_sim_imr_phenom_x_intermediate.py  lal_sim_imr_phenom_x_internals.py  lal_sim_imr_phenom_x_internals_dataclass.py  lal_sim_imr_phenom_x_pnr_internals.py  lal_sim_imr_phenom_x_precession.py  lal_sim_imr_phenom_x_precession_angle_cases.py  lal_sim_imr_phenom_x_precession_dataclass.py  lal_sim_imr_phenom_x_qnm.py  lal_sim_imr_phenom_x_ringdown.py  lal_sim_imr_phenom_x_utilities.py  lal_sim_imr_phenom_xphm.py  lal_sim_inspiral.py  lal_sim_inspiral_pn_coefficients.py  lal_sim_inspiral_waveform_flags.py  parameter_dataclass.py  sim_inspiral_eos.py
test/: NRTidalv3_systematic_test.ipynb  NRTidalv3_testing.ipynb  XAS_testing.ipynb  benchmark_waveform.py  test_NRTidalv3_mismatch.ipynb  test_XAS_amplitude.ipynb  test_XAS_phase.ipynb  test_conversion.py  test_waveforms.py
test/old_tests/: benchmark_waveform.py  test_imrphenomd.py
tests/: conftest.py  test_conversion.py  test_elliptic_integrals.py
tests/imr_phenom_xphm/: data_class_sample_data.py  test_lal_sim_imr_phenom_x_internals.py  test_lal_sim_imr_phenom_x_internals_dataclass.py  test_lal_sim_imr_phenom_x_pnr_internals.py  test_lal_sim_imr_phenom_x_precession.py  test_lal_sim_imr_phenom_x_precession_angle_cases.py  test_lal_sim_imr_phenom_x_precession_dataclass.py  test_lal_sim_imr_phenom_x_utilities.py  test_lal_sim_imr_phenom_xphm.py  test_lal_sim_inspiral.py  test_lal_sim_inspiral_waveform_flags.py  test_sim_inspiral_eos.py
tests/old_tests/: benchmark_waveform.py  check_waveform_match.py  old_test_IMRPhenomX.py  old_test_imrphenomd.py
